<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"        
        android:background="@drawable/lisa"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_marginBottom="10.0dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/launch_button"
            android:layout_width="145.0dip"
            android:layout_height="40.0dip"            
            
            android:background="@color/walah"
            android:text="@string/launch"
            android:textSize="14.0sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="145.0dip"
            android:layout_height="40.0dip"            
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/walah"
            android:text="@string/settings"
            android:textSize="14.0sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <!-- Display icons on the botton of the page -->
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_white"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/set_ico_img_home"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_home"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/set_ico_img_msg"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_msg"
            android:src="@drawable/msg" />
        <ImageView
            android:id="@+id/set_ico_img_mic"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_mic"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@+id/set_ico_img_call"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_settings"
            android:src="@drawable/ph_call" />
    </LinearLayout>
    
</LinearLayout>