<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/lo_contact">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="-1.0dip"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:paddingTop="20dp"
            android:text="Register People you can contact by a button click"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:hint="Full Name"
            android:textColorHint="@color/my_wired_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:hint="Phone Number"
            android:textColorHint="@color/my_wired_back"
            android:layout_marginTop="20.0dip"           
            android:inputType="phone" />
	
        
        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginTop="18.0dip"
            android:background="@color/walah"
            android:text="@string/add_contact" />
   </LinearLayout>
    <!-- Display icons on the botton of the page -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_white"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/set_ico_img_home"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_home"
            android:src="@drawable/home" />

        <ImageView
            android:id="@id/set_ico_img_msg"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_msg"
            android:src="@drawable/msg" />
        <ImageView
            android:id="@id/set_ico_img_mic"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/icon_mic"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@id/set_ico_img_call"
            android:layout_width="0.0dip"
            android:layout_height="25.0dip"
            android:layout_marginStart="4.0dip"
            android:layout_marginLeft="4.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:contentDescription="PHONE CALL"
            android:src="@drawable/ph_call" />
    </LinearLayout>

</LinearLayout>